Fixed horizontal scrolling issue on mobile.

--- a/sass/qratorwp/_qratorwp.scss
+++ b/sass/qratorwp/_qratorwp.scss
@@ -85,6 +85,11 @@ a {
     margin-bottom: 0;
     width: 50%;
 
+    @media screen and (max-width: 880px) {
+        margin: 0;
+        padding: 0 25px;
+    }
+
     h1 {
         margin: 0;
         padding: 0;
